--- a/index.html
+++ b/index.html
@@ -3,9 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="basic.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="top-rule"></div>
+    <h1 class="username">Trương Võ Hải Âu</h1>
+    <div class="contact">
+        <p class="greenword">Junior Frontend Developer</p>
+        <p class="info">123 Your Street</p>
+        <p class="info">Your City, ST 12345</p>
+        <p class="info">(123) 456-7890</p>
+        <p class="info">no_reply@example.com</p>
+    </div>
+    <div class="skill">
+        <p class="greenword">Skills</p>
+        <p class="info">HTML, CSS, JavaScript, Accessibility, Figma to Design, Responsive Web Design, Technical Writing, Presentation</p>
+    </div>
+    <div class="education">
+        <p class="greenword">Education</p>
+        <p class="blueword">School Name, Location - Degree</p>
+        <p class="info">Month 20xx to Month 20xx</p>
+        <p class="info">List of exciting things you did at university</p>
+    </div>
+    <div class="experience">
+        <p class="greenword">Experience</p>
+        <p class="blueword">Company Name, Loacation - Job Title</p>
+        <p class="info">Month 20xx to Month 20xx</p>
+        <ul class="achievements">
+            <li>List of achievements</li>
+            <li>List of achievements</li>
+            <li>List of achievements</li>
+        </ul>
+        <p class="info">Skills: List of skills used or gained at this company</p>
+    </div>
+    <div class="section">
+        <p class="greenword">Across the Internet</p>
+        <p class="info">Add your Linkedln, GitHub profile links</p>
+    </div>
 </body>
 </html>
