--- a/ex1.html
+++ b/ex1.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="basic.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="basic1.css">
+    <title>Student Info</title>
 </head>
 <body>
     <div class="top-rule"></div>
